2009-05-03  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.Moonlight.csproj:
	* Templates/PreviewTemplate.html: Add HTML template for
	  previewing.

2009-05-03  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/XamlG.cs:
	* MonoDevelop.Moonlight/MoonlightParser.cs: Add
	  System.Windows.Controls.Primitives to the generated imports.

2009-05-02  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightBuildExtension.cs: Remove xap
	  file in clean step.

2009-05-02  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightBuildExtension.cs: Implement
	  support for checking when we need to rebuild.

2009-05-02  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightBuildExtension.cs: Fix dll
	  filenames.

2009-05-02  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightBuildExtension.cs: Fix
	  zipping.

2009-05-01  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.Moonlight.csproj: Add xapification code.

	* MonoDevelop.Moonlight/MoonlightBuildExtension.cs: Add
	  initial xapification support.

2009-05-01  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightBuildExtension.cs:
	  Fix respack execution.

2009-05-01  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightBuildExtension.cs: Implement
	  respack invocation. Fix updating of xaml.g.cs files.

2009-05-01  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.Moonlight.csproj:
	* MonoDevelop.Moonlight/XamlG.cs:
	* MonoDevelop.Moonlight.addin.xml:
	* MonoDevelop.Moonlight/MoonlightBuildExtension.cs: Add a
	  build step that generates and injects the xaml.g.cs files.

2009-04-17  Mike Kestner  <mkestner@novell.com>

	* MonoDevelop.Moonlight.csproj: don't require specific
	gtk-sharp version.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>
